move the responsive nav stuff into its own directory

--- a/source/layout.haml
+++ b/source/layout.haml
@@ -29,7 +29,7 @@
     = javascript_include_tag 'vendor/prettify.js/prettify'
     = javascript_include_tag 'code-highlight'
 
-    = javascript_include_tag 'vendor/responsive-nav'
+    = javascript_include_tag 'vendor/responsive-nav/responsive-nav.min'
     = javascript_include_tag 'site-nav'
 
   %body
