defining the columns in code ruined my layout…

--- a/source/layout.haml
+++ b/source/layout.haml
@@ -35,7 +35,7 @@
   %body
 
     %div.row
-      %header.sidebar
+      %header.large-3.columns.sidebar
         %section.title-area
           -#= image_tag 'headshot.jpg'
           %h1.title= link_to 'Tom Torsney-Weir', '/'
@@ -54,7 +54,7 @@
 
  
 
-      %div{:id => "content", :role => "content"}= yield
+      %div.large-9.columns{:id => "content", :role => "content"}= yield
  
  
     %footer.row
