fix all github links

--- a/source/about.html.multimarkdown.erb
+++ b/source/about.html.multimarkdown.erb
@@ -19,10 +19,10 @@ occasionally.
 
 My email address is [thomas.torsney-weir@univie.ac.at](<%= email_url %>).
 
-I can also be found as "torsneyt" on [Github](<%= github_url %>) and
-[Facebook](<%= facebook_url %>)
-or "gabysbrain" on
-[Twitter](<%= twitter_url %>), [Instagram](none), and
+I can also be found 
+as "gabysbrain" on
+[Github](<%= github_url %>), 
+[Twitter](<%= twitter_url %>), and
 [foursquare](<%= foursquare_url %>).
 
 My work address is:
