--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -1,11 +1,7 @@
+@import "foundation/scss/foundation";
+
 // My settings
 @import "settings";
-
-// Comment out this import if you don't want to use normalize
-@import "normalize";
-
-// Comment out this import if you are customizing you imports below
-@import "foundation";
 
 // The title area processing
 @import "title";
