--- a/source/stylesheets/_title.scss
+++ b/source/stylesheets/_title.scss
@@ -7,7 +7,8 @@
   .title {
     @extend h1;
     font-size: $title-font-size;
-    @media #{$screen} and (max-width:"#{$small-screen}") {
+    //@media #{$screen} and (max-width:"#{$small-screen}") {
+    @media #{$small-only} {
       display: inline;
     }
   }
@@ -17,10 +18,10 @@
   }
 
   nav {
-    @media #{$screen} and (max-width:"#{$small-screen}") {
+    @media #{$small-only} {
       display: inline;
     }
-    @media #{$screen} and (min-width:"#{$small-screen}") {
+    @media #{$small-only} {
       position: relative;
     }
 
@@ -46,7 +47,7 @@
 
       li {
         width: 100%;
-        @media #{$screen} and (max-width:"#{$small-screen}") {
+        @media #{$small-only} {
           a {
             background: $ttw-green;
             color: white;
@@ -63,7 +64,7 @@
     max-height: 9999px;
   }
 
-  @media #{$screen} and (min-width: "#{$small-screen}") {
+  @media #{$small-only} {
     nav.closed {
       max-height: none;
     }
