--- a/source/stylesheets/_title.scss
+++ b/source/stylesheets/_title.scss
@@ -21,7 +21,7 @@
     @media #{$small-only} {
       display: inline;
     }
-    @media #{$small-only} {
+    @media #{$medium-up} {
       position: relative;
     }
 
@@ -64,7 +64,7 @@
     max-height: 9999px;
   }
 
-  @media #{$small-only} {
+  @media #{$medium-up} {
     nav.closed {
       max-height: none;
     }
