--- a/source/stylesheets/_title.scss
+++ b/source/stylesheets/_title.scss
@@ -42,10 +42,11 @@
 
     .menu {
       @include side-nav;
-      font-size: $subtitle-and-nav-font-size;
       width: 100%;
 
       li {
+        font-family: $header-font-family;
+        font-size: $subtitle-and-nav-font-size;
         width: 100%;
         @media #{$small-only} {
           a {
