--- a/source/stylesheets/_custom.scss
+++ b/source/stylesheets/_custom.scss
@@ -94,6 +94,7 @@ body > div.row:first-of-type {
   display: inline;
   list-style: none;
   margin-top: 1em;
+  margin-left: 0;
 
   li {
     display: inline;
