nice tooltip formatting

--- a/source/stylesheets/_settings.scss
+++ b/source/stylesheets/_settings.scss
@@ -50,3 +50,7 @@ $subtitle-and-nav-font-size: rem-calc(18);
 // Solarized settings
 $solarized-theme: light;
 
+// Tooltips
+$tooltip-font-size: 12px;
+$tooltip-padding: rem-calc(6);
+
