move Tuner project page to use the citation library

--- a/source/projects/tuner.html.multimarkdown.erb
+++ b/source/projects/tuner.html.multimarkdown.erb
@@ -20,5 +20,5 @@ guiding the user towards areas that need refinement by placing additional
 sample points. In the second stage the user navigates through the parameter
 space in order to determine areas where the response value is high.
 
-Thomas Torsney-Weir, Ahmed Saad, Torsten Möller, Britta Weber, Hans-Christian Hege, Jean-Marc Verbavatz, Steven Bergner, "Tuner: Principled Parameter Finding for Image Segmentation Algorithms Using Visual Response Surface Exploration," IEEE Transactions on Visualization and Computer Graphics (Proceedings Visualization / Information Visualization 2011), vol. 17, no. 12, pp. 1892--1901, Dec. 2011. 
+<%= cite_full('Torsney-Weir:2011') %>
 
