update cv to use bibtex citations

--- a/source/cv.html.multimarkdown.erb
+++ b/source/cv.html.multimarkdown.erb
@@ -7,29 +7,20 @@ layout: page
 
 ## Refereed journal publications
 
-* Philippe J. Giabbanelli, __Thomas Torsney-Weir__, and Vijay Kumar Mago. 
-  A fuzzy cognitive map of the psychosocial determinants of obesity. 
-  Applied Soft Computing, 12(12):3711–3724, December 2012.
-* __Thomas Torsney-Weir__, Ahmed Saad, Torsten Möller, Britta Weber, 
-  Hans-Christian Hege, Jean- Marc Verbavatz, and Steven Bergner. 
-  Tuner: Principled parameter finding for image segmentation algorithms 
-  using visual response surface exploration. IEEE Transactions on 
-  Visualization and Computer Graphics, 17(12):1892–1901, November-December 2011.
+* <%= cite_full('Giabbanelli:2012') %>
+* <%= cite_full('Torsney-Weir:2011') %>
 
 ## Conference publications
 
-* Philippe J. Giabbanelli, __Thomas Torsney-Weir__, and Diane T. Finegood. 
-  Building a system dynamics model of individual energy balance related 
-  behaviour. In Second Canadian Obesity Summit, volume 35, page 201, 
-  Montreal, April-May 2011.
+* <%= cite_full('Giabbanelli:2011') %>
 
 ## Other
 
-* __Thomas Torsney-Weir__.
+* Thomas Torsney-Weir.
     Visual analysis of high-dimensional parameter spaces.
     Masters thesis, Department of Computing Science, 
     Simon Fraser University, 2012.
-* __Thomas Torsney-Weir__, Ahmed Saad, Torsten Möller, Britta Weber,
+* Thomas Torsney-Weir, Ahmed Saad, Torsten Möller, Britta Weber,
   Hans-Christian Hege, and Jean-Marc Verbavatz. (2011) PReSM: Principled
   parameter finding for image segmentation algorithms using visual response
   surface exploration. SFU Computing Science Department TR–2011–01.
