put research blurb in a p tag so it gets paragraph formatting

--- a/source/index.html.haml
+++ b/source/index.html.haml
@@ -6,8 +6,7 @@ layout: page
   %div.panel
     %h2 Research interests
 
-    I am interested in using visualization techniques along with statistical
-    modeling in order to perform optimization in high-dimensional spaces.
+    %p I am interested in using visualization techniques along with statistical modeling in order to perform optimization in high-dimensional spaces.
 
     %ul
       %li Visualization
