pad the byline in blog articles

--- a/source/stylesheets/_custom.scss
+++ b/source/stylesheets/_custom.scss
@@ -33,6 +33,8 @@ body > div.row:first-of-type {
 .byline {
   @include grid-row;
 
+  padding-bottom: 0.5em;
+
   .date {
     display: inline;
   }
