add new paragraph spacing to the bottom of code blocks

--- a/source/stylesheets/_syntax.scss
+++ b/source/stylesheets/_syntax.scss
@@ -33,6 +33,7 @@ pre.prettyprint {
   padding: 8px;
   border: 1px solid #E1E1E8;
   border-radius: 4px;
+  margin-bottom: $paragraph-margin-bottom;
   
   /* Specify class=linenums on a pre to get line numbering */
   ol.linenums {
