--- a/source/stylesheets/_settings.scss
+++ b/source/stylesheets/_settings.scss
@@ -1,10 +1,11 @@
 @import "foundation/scss/foundation/functions";
 
-@import url(http://fonts.googleapis.com/css?family=Raleway|Oxygen);
+@import url(http://fonts.googleapis.com/css?family=Raleway|Oxygen|Anonymous+Pro);
 
 $base-font-size: 14px;
 $body-font-family: 'Oxygen', sans-serif;
 $header-font-family: 'Raleway', sans-serif;
+$code-font-family: 'Anonymous Pro', Consolas, Courier, monospace;
 
 $webicons-url: "/images/webicons/" !default;
 
