add reviews to cv

--- a/source/cv.html.multimarkdown.erb
+++ b/source/cv.html.multimarkdown.erb
@@ -46,6 +46,13 @@ layout: page
 * IEEE student member
 * SIAM student member
 
+## Reviewerships
+
+* EuroVis, 2014, 2013, 2012.
+* International Conference on Intelligent User Interfaces, 2014.
+* IEEE Transactions on Visualization and Computer Graphics, 2013, 2012.
+* Computers and Graphics, 2013.
+
 ## Teaching assistant appointments
 
 * CMPT 361 Introduction to Computer Graphics, Fall 2011.
