--- a/source/stylesheets/site.css.scss
+++ b/source/stylesheets/site.css.scss
@@ -14,6 +14,9 @@
 // The historical blog list stuff
 @import "blog_archive";
 
+// styles for posts
+@import "posts";
+
 // My custom stuff
 @import "custom";
 
