--- a/source/tag.html.slim
+++ b/source/tag.html.slim
@@ -4,7 +4,8 @@ per_page: 12
 layout: page
 ---
 
-%h1= "Articles tagged \"#{tagname}\""
+h1 
+  | Articles tagged "#{tagname}"
 
 = partial "archive_list"
 
