--- a/source/projects/index.html.slim
+++ b/source/projects/index.html.slim
@@ -5,14 +5,14 @@ layout: layout
 
 - projects = sitemap.where(:layout.include => "project").all
 
-%h1 Projects
+h1 Projects
 
-%h2 Research
+h2 Research
 - projects.each do |proj|
   - if proj.data.category == "research"
     = partial "project_summary", :locals => {:proj => proj}
 
-%h2 Other
+h2 Other
 - projects.each do |proj|
   - if proj.data.category != "research"
     = partial "project_summary", :locals => {:proj => proj}
