--- a/source/partials/_featured_projects.slim
+++ b/source/partials/_featured_projects.slim
@@ -1,8 +1,7 @@
 
-- projects = ["Tuner", "R notebook"]
 
 ul.selected-projects
-  - projects.each do |proj_name|
+  - data.featured_projects.each do |proj_name|
     - proj = sitemap.where(:layout => "project", :title => proj_name).first
     li
       = link_to image_tag(proj.data.teaser), proj
