--- a/source/layouts/project.slim
+++ b/source/layouts/project.slim
@@ -1,5 +1,5 @@
 
-- wrap_layout :layout do
+= wrap_layout :layout do
   article
     h1 = current_page.data.title
     - if current_page.data.teaser
