fix the project list page

--- a/source/projects/index.html.slim
+++ b/source/projects/index.html.slim
@@ -3,7 +3,7 @@ title: Tom's projects
 layout: layout
 ---
 
-- projects = sitemap.where(:layout.include => "project").all
+- projects = current_resource.children
 
 h1 Projects
 
