tuner gets download link

--- a/source/projects/tuner.html.multimarkdown.erb
+++ b/source/projects/tuner.html.multimarkdown.erb
@@ -5,6 +5,7 @@ category: research
 summary: We present an approach to optimizing a high-dimensional parameter space for computer simulations.
 teaser: tuner_teaser.png
 video: http://www.youtube.com/watch?v=f44P7ulT2yY
+download: https://github.com/gabysbrain/tuner/releases/latest
 source: https://github.com/gabysbrain/tuner
 paper: http://homepage.univie.ac.at/thomas.torsney-weir/papers/vis11_tuner.pdf
 mendeley: http://www.mendeley.com/research/tuner-principled-parameter-finding-image-segmentation-algorithms-using-visual-response-surface-exploration/
