use tiny button for cv pdf

--- a/source/cv.html.slim
+++ b/source/cv.html.slim
@@ -6,7 +6,7 @@ layout: page
 
 .clearfix
   h1.left CV
-  = link_to "/cv.pdf", {:class => "button small radius right"} do 
+  = link_to "/cv.pdf", {:class => "button tiny radius right"} do 
     | pdf version
 
 - data.cv.map do |section_name, content|
