move social urls to a yml file

--- a/source/partials/_social.slim
+++ b/source/partials/_social.slim
@@ -1,9 +1,8 @@
 
-- links = [["mail", "Email", email_url, "Email me"],
-           ["twitter", "Twitter", twitter_url, "Follow me on Twitter"],
-           ["facebook", "Facebook", facebook_url, "Facebook"],
-           ["foursquare", "foursquare", foursquare_url, "Follow me on foursquare"],
-           ["github", "Github", github_url, "Github projects"],
+- links = [["mail", "Email", data.social.email, "Email me"],
+           ["twitter", "Twitter", data.social.twitter, "Follow me on Twitter"],
+           ["facebook", "Facebook", data.social.facebook, "Facebook"],
+           ["github", "Github", data.social.github, "Github projects"],
            ["rss", "RSS", '/feed.xml', "Subscribe"]]
 
 ul.sociallist
