add linkedin to the social links

--- a/source/partials/_social.slim
+++ b/source/partials/_social.slim
@@ -2,6 +2,7 @@
 - links = [["mail", "Email", data.social.email, "Email me"],
            ["twitter", "Twitter", data.social.twitter, "Follow me on Twitter"],
            ["facebook", "Facebook", data.social.facebook, "Facebook"],
+           ["linkedin", "linkedin", data.social.linkedin, "LinkedIn"],
            ["github", "Github", data.social.github, "Github projects"],
            ["rss", "RSS", '/feed.xml', "Subscribe"]]
 
