use font-awesome sass gem rather than cdn/bower mix

--- a/source/stylesheets/_icons.scss
+++ b/source/stylesheets/_icons.scss
@@ -1,4 +1,4 @@
-@import "font-awesome/scss/font-awesome";
+@import "font-awesome";
 
 .icon:before {
   @extend .fa;
@@ -26,7 +26,7 @@
   &.linkedin {
     @extend .fa-linkedin;
   }
-  
+
   &.rss {
     @extend .fa-rss;
   }
