fix social links for social.yml file

--- a/source/about.html.md.erb
+++ b/source/about.html.md.erb
@@ -17,13 +17,12 @@ I try to spend as much time in the outdoors as possible. I love skiing,
 hiking, climbing, and scuba diving.  I have also been known to run or bike
 occasionally.
 
-My email address is [thomas.torsney-weir@univie.ac.at](<%= email_url %>).
+My email address is [thomas.torsney-weir@univie.ac.at](<%= data.social.email %>).
 
 I can also be found
 as "gabysbrain" on
-[Github](<%= github_url %>),
-[Twitter](<%= twitter_url %>), and
-[foursquare](<%= foursquare_url %>).
+[Github](<%= data.social.github %>) and
+[Twitter](<%= data.social.twitter %>).
 
 My work address is:
 
