add mathjax from the CDN

--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -16,6 +16,8 @@ html.no-js lang="en"
     link rel="alternate" type="application/atom+xml" title="Tom Torsney-Weir's feed" href="/feed.xml"
     = stylesheet_link_tag 'site'
 
+    = javascript_include_tag 'http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML'
+
     / google analytics
     == partial 'google_analytics'
 
