both ordered and unordered lists should be styled with the list delimiter inside

--- a/source/stylesheets/_custom.scss
+++ b/source/stylesheets/_custom.scss
@@ -128,7 +128,7 @@ body > div.row:first-of-type {
     border-bottom-color: $hr-border-color;
   }
 
-  ul {
+  ul ol {
     list-style-position: inside;
   }
 
